# needle_designer

./: .gitignore  CLAUDE.md  PRD.md  Software-Development-Spec.docx  WorkBii-Parts-List-Updated.docx  index.html  new-canvas.md  package-lock.json  package.json  vite.config.ts
.claude/: plan-area-selection.md  plan-color-swap-tool.md  plan-stitch-types.md  settings.local.json
docs/: 1.txt  My Pattern.stitchalot  My Pattern1.ndp  TEXT_SYSTEM.md  Untitled-1.github-issues  canvas pattern.afdesign  canvas-alternatives.md  claude.md  dmc-thread-inventory-sheet-by-lord-libidan-updated-nov25.xlsx  dmc-thread-reference.md  import-solution.md  licensing-plan.md  symbol-reference.md
scripts/: convert-threads.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/licensing/: api.rs  config.rs  device.rs  manager.rs  mod.rs  storage.rs  types.rs
src-tauri/src/threads/: anchor.rs  color_matching.rs  dmc.rs  kreinik.rs  mod.rs
src/components/: BitmapFontEditor.tsx  CanvasClipWarningDialog.tsx  CanvasLayoutDialog.tsx  ColorMatchDialog.tsx  ColorPalette.tsx  DeleteLayerDialog.tsx  ExportPdfDialog.tsx  EyedropperButton.tsx  FontBrowserDialog.tsx  ImportImageDialog.tsx  LayerPanel.tsx  LicenseDialog.tsx  LicenseGate.tsx  NewProjectDialog.tsx  OverlayImageDialog.tsx  PatternCanvas.tsx  PreviewCanvasDialog.tsx  ProgressTrackingPanel.tsx  SelectionContextMenu.tsx  SymbolAssignmentDialog.tsx  TextEditorDialog.tsx  ThreadLibraryDialog.tsx  ThreadLibrarySection.tsx  ToggleSwitch.tsx  Toolbar.tsx  TrialBanner.tsx  UnsavedChangesDialog.tsx  UploadImageDialog.tsx
src/data/: anchorThreads.ts  bitmapFontRenderer.ts  bitmapFonts.ts  bundledFonts.ts  customFonts.ts  dmcThreads.ts  googleFonts.ts  kreinikThreads.ts  pixelFonts.ts  threadLibrary.ts
src/stores/: configStore.ts  licenseStore.ts  patternStore.ts  sessionHistoryStore.ts
src/types/: license.ts
src/utils/: canvasMeshPattern.ts  colorMatching.ts  openUrl.ts  pdfExport.ts  symbolAssignment.ts  textToStitches.ts
