[package]
name = "stitch-a-lot-studio"
version = "1.2.3"
description = "Cross-platform needlepoint pattern design application"
authors = ["you"]
edition = "2021"

[lib]
name = "stitch_a_lot_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-stronghold = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
base64 = "0.22"
resvg = "0.44"
urlencoding = "2"

# Licensing system dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
dirs = "6"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
screenshots = "0.8"
machineid-rs = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
